# DeepLearningPratice

./: .gitignore
Part 1 - Artificial Neural Networks/Implementation/: README.md  pyproject.toml
Part 1 - Artificial Neural Networks/Implementation/ann/: ann.py
Part 2 - Convolutional Neural Networks/Implementation/: README.md  pyproject.toml
