[tool.poetry]
name = "ann"
version = "0.1.0"
description = ""
authors = ["張智翔 <ch.chang.job@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.0, <=3.10"
keras = "^2.12.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.12.0"
Theano = "^1.0.5"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
